[Frontend] Fix dark mode emote monospace bug
Monospace segments in emote messages would use both the dark background
and inherit the dark text color.

Nominally introduced in 1ed119c01df7694bf0086cab28bc0dead52342d7; the
development frontend (which was merged in this commit) had the bug
introduced in commit e36bf6ed1edc2b83a4a90fe87c9f94707f1ae0d4, i.e.
along with the (re)introduction of the dark theme.

Thanks to Garmy for pointing this one out!

--- a/src/static/room-dark.css
+++ b/src/static/room-dark.css
@@ -138,6 +138,9 @@
 .dark .nick, .dark .message.emote > .line .content {
   color: black;
 }
+.dark .message.emote > .line .content .monospace {
+  background: #f0f0f0;
+}
 .dark .message.ping > .line {
   background: #202000;
   color: inherit;
